tests/security/taintFromAwaitedAbstractMethod/output.txt
ERROR: TaintedData - input.hack:42:18 - Data from a URL query string found its way to an HTML tag using path call to Validator::getInput (input.hack:5:33) ----> $input (input.hack:34:9) ----> InputHandler::handleResult#1 (input.hack:39:46) ----> $args (input.hack:39:46) ----> InputHandler::getResult#1 (input.hack:47:46) ----> MyHandler::getResult#1 ----> $args (input.hack:56:47) --array-fetch--> $args['a'] (input.hack:57:29) ----> ResultOk::__construct#1 (input.hack:15:40) ----> $t (input.hack:15:40) ----> $this->t (input.hack:15:40) --property-assignment--> $this (input.hack:15:40) ----> $this in ResultOk after __construct (input.hack:15:18) ----> return (input.hack:57:16) ----> call to MyHandler::getResult (input.hack:56:55) ----> call to InputHandler::getResult ----> $a (input.hack:40:9) --refine-symbol--> $a narrowed to ResultOk (input.hack:41:13) ----> $this in ResultOk before get (input.hack:17:18) ----> $this (input.hack:18:10) --property-fetch--> $this->t (input.hack:18:17) ----> return (input.hack:18:10) ----> call to ResultOk::get (input.hack:17:25) ----> echo#1 (input.hack:42:18)